# npm/src/ee/identity-federation/app.ts
@@ -80,60 +80,6 @@ export class App {
    *     summary: Create an Identity Federation app
    *     requestBody:
    *       content:
-   *         application/x-www-form-urlencoded:
-   *           schema:
-   *             required:
-   *               - acsUrl
-   *               - entityId
-   *               - name
-   *               - product
-   *               - tenant
-   *             type: object
-   *             properties:
-   *               name:
-   *                 type: string
-   *                 description: Name
-   *               tenant:
-   *                 type: string
-   *                 description: Tenant
-   *               product:
-   *                 type: string
-   *                 description: Product
-   *               acsUrl:
-   *                 type: string
-   *                 description: ACS URL
-   *               entityId:
-   *                 type: string
-   *                 description: Entity ID
-   *               logoUrl:
-   *                 type: string
-   *                 description: Logo URL
-   *               faviconUrl:
-   *                 type: string
-   *                 description: Favicon URL
-   *               primaryColor:
-   *                 type: string
-   *                 description: Primary color
-   *               tenants:
-   *                 type: array
-   *                 items:
-   *                   type: string
-   *                 description: Mapping of tenants whose connections will be grouped under this Identity Federation app
-   *               mappings:
-   *                 type: array
-   *                 items:
-   *                   type: string
-   *                 description: Mapping of attributes from the IdP to SP
-   *               type:
-   *                 type: array
-   *                 items:
-   *                   type: string
-   *                 description: If creating an OIDC app, this should be set to 'oidc' otherwise it defaults to 'saml'
-   *               redirectUrl:
-   *                 type: array
-   *                 items:
-   *                   type: string
-   *                 description: If creating an OIDC app, provide the redirect URL
    *         application/json:
    *           schema:
    *             required:
@@ -188,7 +134,60 @@ export class App {
    *                 items:
    *                   type: string
    *                 description: If creating an OIDC app, provide the redirect URL
-   *       required: true
+   *         application/x-www-form-urlencoded:
+   *           schema:
+   *             required:
+   *               - acsUrl
+   *               - entityId
+   *               - name
+   *               - product
+   *               - tenant
+   *             type: object
+   *             properties:
+   *               name:
+   *                 type: string
+   *                 description: Name
+   *               tenant:
+   *                 type: string
+   *                 description: Tenant
+   *               product:
+   *                 type: string
+   *                 description: Product
+   *               acsUrl:
+   *                 type: string
+   *                 description: ACS URL
+   *               entityId:
+   *                 type: string
+   *                 description: Entity ID
+   *               logoUrl:
+   *                 type: string
+   *                 description: Logo URL
+   *               faviconUrl:
+   *                 type: string
+   *                 description: Favicon URL
+   *               primaryColor:
+   *                 type: string
+   *                 description: Primary color
+   *               tenants:
+   *                 type: array
+   *                 items:
+   *                   type: string
+   *                 description: Mapping of tenants whose connections will be grouped under this Identity Federation app
+   *               mappings:
+   *                 type: array
+   *                 items:
+   *                   type: string
+   *                 description: Mapping of attributes from the IdP to SP
+   *               type:
+   *                 type: array
+   *                 items:
+   *                   type: string
+   *                 description: If creating an OIDC app, this should be set to 'oidc' otherwise it defaults to 'saml'
+   *               redirectUrl:
+   *                 type: array
+   *                 items:
+   *                   type: string
+   *                 description: If creating an OIDC app, provide the redirect URL
    *     responses:
    *       200:
    *         description: Success
@@ -457,7 +456,7 @@ export class App {
    *     summary: Update an Identity Federation app
    *     requestBody:
    *       content:
-   *         application/x-www-form-urlencoded:
+   *         application/json:
    *           schema:
    *             required:
    *               - id
@@ -497,7 +496,7 @@ export class App {
    *                 items:
    *                   type: string
    *                 description: Mapping of attributes from the IdP to SP
-   *         application/json:
+   *         application/x-www-form-urlencoded:
    *           schema:
    *             required:
    *               - id
